<resources>
    <string name="features_sign_up_app_name">CharityApp</string>
    <string name="features_sign_up_create_account">Создайте аккаунт</string>
    <string name="features_sign_up_email">Email</string>
    <string name="features_sign_up_password">Пароль</string>
    <string name="features_sign_up_do_you_have_acc">Уже есть аккаунт?</string>
    <string name="features_sign_up_enter">Войти</string>
    <string name="features_sign_up_create">создать</string>
    <string name="features_sign_up_repeat_password">Повторите пароль</string>
</resources>